- fix z-index issue with KY Lotto - Jackpot Triggers - mega millions - 300x600;

--- a/source/kylotto-jackpottriggers/megamillions/300x600/src/sass/_build.scss
+++ b/source/kylotto-jackpottriggers/megamillions/300x600/src/sass/_build.scss
@@ -30,8 +30,8 @@ body {
 }
 
 #ad {
-    color:black;
     position:relative;
+    color:black;
     display: block;
     overflow: hidden;
     width: $width;
@@ -46,6 +46,7 @@ body {
     background-size:cover;
     background-position:center;
     background-repeat:no-repeat;
+    z-index:0;
 }
 
 #banner {
